# Ard

./: .buildinfo  .coveragerc  .coveragerc_no_interarray  .gitignore  COPYRIGHT  LCOE_analysis.html  README.md  genindex.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  test_LCOE_stack_pyrite.npz
.github/workflows/: black.yml  deploy-pages.yaml  python-tests-system.yml  python-tests-unit.yml  python-tests.yml
_autosummary/: ard.cost.html  ard.cost.wisdem_wrap.html  ard.farm_aero.floris.html  ard.farm_aero.html  ard.farm_aero.templates.html  ard.layout.fullfarm.html  ard.layout.gridfarm.html  ard.layout.html  ard.layout.templates.html  ard.test_utils.html  ard.utils.html  ard.viz.html  ard.viz.plot_layout.html  ard.wind_query.html
_modules/: index.html
_modules/ard/: test_utils.html  utils.html  wind_query.html
_modules/ard/cost/: wisdem_wrap.html
_modules/ard/farm_aero/: floris.html  templates.html
_modules/ard/layout/: fullfarm.html  gridfarm.html  templates.html
_modules/ard/viz/: plot_layout.html
_sources/_autosummary/: ard.cost.rst  ard.cost.wisdem_wrap.rst  ard.farm_aero.floris.rst  ard.farm_aero.rst  ard.farm_aero.templates.rst  ard.layout.fullfarm.rst  ard.layout.gridfarm.rst  ard.layout.rst  ard.layout.templates.rst  ard.test_utils.rst  ard.utils.rst  ard.viz.plot_layout.rst  ard.viz.rst  ard.wind_query.rst
ard/: README.md  __init__.py  test_utils.py  utils.py  wind_query.py
ard/collection/: __init__.py  interarray_wrap.py  optiwindnet_wrap.py  templates.py
ard/cost/: approximate_turbine_spacing.py  wisdem_wrap.py
ard/farm_aero/: __init__.py  floris.py  placeholder.py  templates.py
ard/geographic/: geomorphology.py
ard/glue/: glue_design_cfrontin.md  prototype.py
ard/layout/: __init__.py  boundary.py  fullfarm.py  gridfarm.py  spacing.py  sunflower.py  templates.py
ard/offshore/: __init__.py  mooring_constraint.py  mooring_constraint_sandbox.ipynb  mooring_design.py  mooring_design_constant_depth.py  mooring_design_detailed.py
ard/utils/: core.py  geometry.py  io.py  mathematics.py  test_utils.py  utils.py
assets/: .gitignore
assets/ard_initial_xdsm/: ard_xdsm.py
assets/ard_xdsm/: ard_xdsm.py  run.sh
assets/images/: avatar_Ard1_JHaland_CCBY20.json  avatar_Ard2_JHaland_CCBY20.json
assets/offshore_xdsm/: ard_xdsm.py
assets/windard_xdsm/: run.sh  windard_xdsm.py
docs/: LCOE_analysis.ipynb  _config.yml  _toc.yml  api_reference.md  explanation.md  howto.md  installation.md  intro.md  multi_fidelity_aep.md  reference.md  structure.md  tutorial.md  utils.md
docs/LCOE_demo_out/: case.sql
examples/: .gitignore
examples/FLORIS_power_comp/: .gitignore  AEP_comp.py  power_comp.py
examples/FLORIS_power_comp/data/: FLORIS.yaml  power_thrust_table_ccblade_IEA-3p4-130-RWT.csv  turbine_spec_IEA-3p4-130-RWT.yaml
examples/LCOE_stack/: LCOE_LB_demo.py  LCOE_OFFSHORE_demo.py  LCOE_OFL_demo.py  LCOE_analysis.ipynb  LCOE_demo.py  output.ipynb  sandbox.py
examples/data/: power_thrust_table_ccblade_IEA-22-284-RWT.csv  turbine_spec_IEA-22-284-RWT.yaml  turbine_spec_IEA-3p4-130-RWT.yaml  wrg_example.wrg
examples/data/offshore/: GulfOfMaine_bathymetry_100x99.txt  GulfOfMaine_soil_100x99.txt
examples/offshore/: bathymetry.ipynb  mooring_constraint_sandbox.ipynb  optimization_demo.py
examples/offshore-detailed/: analysis_demo.py
examples/offshore-fixed/: optimization_demo.py
examples/onshore/: optimization_demo.py
test/: README.md  conftest.py  run_local_test.sh  run_local_test_system.sh  run_local_test_unit.sh
test/system/LCOE_stack/: test_LCOE_LB_stack.py  test_LCOE_LB_stack_pyrite.npz  test_LCOE_OFB_stack.py  test_LCOE_OFB_stack_pyrite.npz  test_LCOE_OFL_stack.py  test_LCOE_OFL_stack_pyrite.npz  test_LCOE_stack.py
test/system/ard/collection/: test_optiwindnet.py  (+1 more)
test/unit/: test_utils.py  test_wind_query.py
test/unit/cost/: test_orbit_wrap_baseline_farm.npz  test_wisdem_wrap.py  test_wisdem_wrap_baseline_farm.npz
test/unit/farm_aero/: test_floris.py  test_floris_aep_pyrite.npz  test_floris_batch_pyrite.npz  test_templates.py
test/unit/layout/: test_fullfarm.py  test_gridfarm.py  test_templates.py
test/unit/utils/: test_geometry.py  test_matematics.py  test_utils.py
test/unit/viz/: test_plot_layout.py
windard/: README.md  utils.py  wind_query.py
windard/cost/: wisdem_wrap.py
windard/farm_aero/: floris.py  templates.py
windard/farm_aero_comp/: floris.py  templates.py
windard/glue/: prototype.py
windard/layout/: fullfarm.py  gridfarm.py  templates.py
windard/offshore/: mooring_constraint_sandbox.ipynb
windard/viz/: plot_layout.py
(+31 files in other folders)
