
# Project configuration for windArd
# TOML spec: https://toml.io/en/v1.0.0

[build-system]
requires = [
  "setuptools",
]
build-backend = "setuptools.build_meta"

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
[tool.setuptools]
packages = ["windard"]

[project]
name = "windArd"
version = "0.0.0a1"
authors = [
  {name = "Cory Frontin", email = "cory.frontin@nrel.gov"},
  {name = "Rafael Mudafort", email = "rafael.mudafort@nrel.gov"},
]
description = "A package for multidisciplinary and/or multifidelity wind farm design"
readme= "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy",
  "floris",
  "wisdem",
  "marmot-agents",
  "openmdao",
  "shapely",
]
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]
[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://cfrontin.github.io/windArd"
Repository = "https://github.com/cfrontin/windArd.git"
Issues = "https://github.com/cfrontin/windArd/issues"
# Changelog = "https://github.com/cfrontin/windArd/blob/main/CHANGELOG.md"
